@@ -1,0 +1,16 @@
+// Copyright 2002-2011, University of Colorado
+package edu.colorado.phet.faraday;
+
+import edu.colorado.phet.common.phetcommon.simsharing.messages.IUserComponent;
+
+/**
+ * XXX
+ *
+ * @author Chris Malley (cmalley@pixelzoom.com)
+ */
+public class FaradaySimSharing {
+
+    public static enum UserComponent implements IUserComponent {
+        barMagnetStrengthSlider
+    }
+}
